--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@react-spring/parallax": "^9.7.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "framer-motion": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
-    "react-router-dom": "^6.8.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
