--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@react-spring/parallax": "^9.7.1",
+    "axios": "^1.3.4",
     "framer-motion": "^10.0.2",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.9.0",
