--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.9.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
